--- a/Mendota_P_ext_all.Rmd
+++ b/Mendota_P_ext_all.Rmd
@@ -51,43 +51,37 @@ b) merging data...
 ```{r}
 extP_load<- merge(atm2, streams2, by="sampledate") #adds two data files together
 extP_load <- extP_load %>%
-  mutate(total=(TotP_kgday.x + TotP_kgday.y), #combine atm P and stream P
-         atm=TotP_kgday.x, #rename column
-         TotP_kgday.x=NULL, #remove duplicate column
-         streams=TotP_kgday.y, #rename column
-         TotP_kgday.y=NULL) #remove duplicate column
+  mutate(total=(atm_TotP_kgday + allInflows_TotP_kgday), #combine atm P and stream P
+         daynum=as.integer(format(sampledate, "%j")),
+         Yr=as.integer(format(sampledate, "%Y")),
+         daynum.x=NULL, Yr.x=NULL, daynum.y=NULL, Yr.y=NULL #remove duplicate columns
+         ) #remove duplicate column
 ```
 
 External P loading merged.
-
-c) reshaping the data frame...
-
-```{r}
-extP_load<- melt(extP_load, #the table you want to reshape wide to long
-               id.vars=c("sampledate"), #the column to use as unique id
-               measure.vars=c("atm","streams","total"), 
-               #the columns where values will be taken
-               variable.name="Source", #label the source of P loading
-               value.name="TotP_kgday" #label the value with units
-               )
-extP_load<- extP_load %>%
-  mutate(daynum=as.integer(format(sampledate, format="%j")), #add column with 
-         #daynum for filtering
-         Yr=as.integer(format(sampledate, format="%Y")) #add column with Yr 
-         )
-```
 
 # Step 3. Summarize and view data:
 
 a) plot total P load for CyanoHAB season by source for each year...
 ```{r}
-extP_load_sumtot<- extP_load %>%
-  filter(Source!="total") %>%
-  group_by(Yr, Source) %>% #for every year
-  summarize(sum_TP_kgyr=sum(TotP_kgday)) #calculate annual total P load
-extP_load_sumtot
+extP_load_long<- melt(extP_load, #the table you want to reshape wide to long
+               id.vars=c("sampledate"), #the column to use as unique id
+               measure.vars=c("atm_TotP_kgday","allInflows_TotP_kgday"), 
+               #the columns where values will be taken
+               variable.name="Source", #label the source of P loading
+               value.name="TotP_kgday" #label the value with units
+               )
+extP_load_long$Source<-as.character(extP_load_long$Source) #tell R character data held
+extP_load_long$Source[extP_load_long$Source=="atm_TotP_kgday"] <- "atmosphere"
+extP_load_long$Source[extP_load_long$Source=="allInflows_TotP_kgday"] <- "streams"
 
-ggplot(extP_load_sumtot, aes(x=as.factor(Yr), y=sum_TP_kgyr, 
+extP_load_long<- extP_load_long %>%
+  mutate(Yr=format(sampledate, "%Y") #add year back in data frame
+         ) %>%
+  group_by(Yr, Source) %>% #for each year and each source
+  summarize(TotP_kgday=sum(TotP_kgday)) #sum up all the TotP_kgday
+
+ggplot(subset(extP_load_long, Yr<=2018), aes(x=Yr, y=TotP_kgday, 
                              fill=Source)) + #separate sources by fill color
   geom_bar(position="stack", stat="identity", color="black") + #stacked bar graph
   scale_fill_manual(values=c("grey", "black")) + #atm = grey, streams=black
@@ -101,11 +95,11 @@ b) calculate average daily total P load for CyanoHAB season...
 
 ```{r}
 extP_load_dayavg<- extP_load %>%
-  filter(Source=="total") %>% #for the total external P load
-  summarize(mean=mean(TotP_kgday, na.rm=TRUE), #calculate mean
-            se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
-            min=min(TotP_kgday, na.rm=TRUE),
-            max=max(TotP_kgday, na.rm=TRUE)
+  filter(daynum>=195 & daynum<=255) %>% #filter for the CyanoHAB season 
+  summarize(mean=mean(total, na.rm=TRUE), #calculate mean
+            se=(sd(total, na.rm=TRUE)/sqrt(length(total))),
+            min=min(total, na.rm=TRUE),
+            max=max(total, na.rm=TRUE)
             )
 extP_load_dayavg
 ```
