--- a/Mendota_P_water.Rmd
+++ b/Mendota_P_water.Rmd
@@ -100,7 +100,8 @@ plot(hypoP_interp,
 
 Hypo P data transformed and filtered.
 
-# Step 3. Combine epi and hypo data into single data file, calculate hypo: epi total P ratio:
+# Step 3. Combine epi and hypo data into single data file, calculate hypo: epi 
+total P ratio:
 
 ```{r}
 Me_P_water<- merge(epiP_interp, hypoP_interp, by="sampledate") #merge the epi and hypo P by sample date
@@ -121,12 +122,13 @@ Me_P_water<- Me_P_water %>% #need to clean up
 a) Plotting epi P data...
 
 ```{r}
-ggplot(data=Me_P_water, 
+ggplot(data=subset(Me_P_water, Yr>=2012), 
        aes(x=daynum,y=Epi_TotP_mgL)) + 
-  geom_point(aes(col=Yr))+
+  geom_point(aes(shape=as.factor(Yr)))+
   labs(title="Epilimnion (depth < 4 m), Lake Mendota, WI", #plot title
        x="Day of Year", #x axis label
        y="Total Phosphorus Concentration (mg/L)", #y axis label
+       shape="Year",
        caption="White highlight indicates CyanoHAB season, mid-Jul to mid-Sep.
        Red dashed line indicates moving-average regression.") + 
   ylim(0, max(Me_P_water$Epi_TotP_mgL)) +
@@ -134,7 +136,7 @@ ggplot(data=Me_P_water,
                                   by=30)) + #every 30 days (1 month) - CHANGE AS
   # NEEDED
   theme_classic()+
-  scale_color_continuous(name="Year")+
+  #scale_color_continuous(name="Year")+
   geom_smooth(col="darkred", lty="dashed") + #adds loess curve (moving average regression model)
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
@@ -147,12 +149,13 @@ Epi data plotted.
 b) Plotting hypo P data...
 
 ```{r}
-ggplot(data=Me_P_water, 
+ggplot(data=subset(Me_P_water, Yr>=2012), 
        aes(x=daynum,y=Hypo_TotP_mgL)) + 
-  geom_point(aes(col=Yr))+
+  geom_point(aes(shape=as.factor(Yr)))+
   labs(title="Hypolimnion (depth >= 20 m), Lake Mendota, WI", #plot title
        x="Day of Year", #x axis label
        y="TOtal Phosphorus Concentration (mg/L)", #y axis label
+       shape="Year",
        caption="White highlight indicates CyanoHAB season, mid-Jul to mid-Sep.
        Red dashed line indicates moving-average regression.") + 
   ylim(0, max(Me_P_water$Hypo_TotP_mgL)) +
@@ -160,7 +163,7 @@ ggplot(data=Me_P_water,
                                   by=30)) + #every 30 days (1 month) - CHANGE AS
   # NEEDED
   theme_classic()+
-  scale_color_continuous(name="Year")+
+  #scale_color_continuous(name="Year")+ changed to factor no longer color
   geom_smooth(col="darkred", lty="dashed") + #adds loess curve (moving average regression model)
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
@@ -171,12 +174,13 @@ ggplot(data=Me_P_water,
 c) Plotting hypo: epi total P...
 
 ```{r}
-ggplot(data=Me_P_water, 
+ggplot(data=subset(Me_P_water, Yr>=2012), 
        aes(x=daynum,y=HE_ratio_TotP_mgL)) + 
-  geom_point(aes(col=Yr))+
+  geom_point(aes(shape=as.factor(Yr)))+
   labs(title="Hypo: Epi total P ratio, Lake Mendota, WI", #plot title
        x="Day of Year", #x axis label
        y="Hypo: Epi Total Phosphorus", #y axis label
+       shape="Year",
        caption="White highlight indicates CyanoHAB season, mid-Jul to mid-Sep.
        Red dashed line indicates moving-average regression.") + 
   ylim(0, max(Me_P_water$HE_ratio_TotP_mgL)) +
@@ -184,7 +188,7 @@ ggplot(data=Me_P_water,
                                   by=30)) + #every 30 days (1 month) - CHANGE AS
   # NEEDED
   theme_classic()+
-  scale_color_continuous(name="Year")+
+  #scale_color_continuous(name="Year")+ changed to shape factor from color
   geom_smooth(col="darkred", lty="dashed") + #adds loess curve (moving average regression model)
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
