--- a/Mendota_Pexternal_atmdep.Rmd
+++ b/Mendota_Pexternal_atmdep.Rmd
@@ -83,17 +83,17 @@ Total P from atmospheric deposition plotted. Data available from 2012 to 2022.
 
 a) interpolating...
 ```{r}
-date_range<- seq( #creates a vector of sequence data
+atm_date_range<- seq( #creates a vector of sequence data
   min(precip$sampledate), #starting at the first sample date
   max(precip$sampledate), #ending at the last sample date
   by="1 day") #observations every 1 day 
-interpolated<- approx( #creates a vector of data that linearly interpolates 
+atm_interpolated<- approx( #creates a vector of data that linearly interpolates 
   precip$sampledate, #across date
   precip$totP_atm_kgday, #the predicted values of total P
-  xout=date_range) #for every 1 day
+  xout=atm_date_range) #for every 1 day
 precip_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #measurements every 1 day
-                             TotP_kgday=interpolated$y) #predicted total P
+  sampledate = as.Date(atm_interpolated$x), #measurements every 1 day
+                             atm_TotP_kgday=atm_interpolated$y) #predicted total P
 
 precip_interp <-precip_interp %>%
   mutate(daynum=as.integer(format(sampledate, format="%j")), #add column with 
@@ -109,15 +109,14 @@ Total P loading interpreted for atmospheric deposition.
 a) viewing the data...
 ```{r}
 ggplot(data=precip_interp, 
-       aes(x=sampledate, y=TotP_kgday)) +
+       aes(x=daynum, y=atm_TotP_kgday)) +
   geom_point() +
-  geom_line() + 
+  geom_smooth(col="red", lty="dashed") +
   theme_classic(base_size=12) +
-  labs(x="Date", y="Total P deposited (wet and dry), in kg/day") +
-  scale_x_date(date_breaks="1 year") 
+  labs(x="Day of Year", y="Total P deposited (wet and dry), in kg/day") 
 ```
 
-Total P from atmospheric deposition plotted.
+Total P from atmospheric deposition plotted by day of year.
 
 b) calculating average daily total P loading from atm deposit during CyanoHAB 
 season...
@@ -125,11 +124,11 @@ season...
 ```{r}
 precip_dayavg<- precip_interp %>%  
   filter(daynum >=195 & daynum <= 255) %>%
-  summarize(mean=mean(TotP_kgday, #average daily total P loading
+  summarize(mean=mean(atm_TotP_kgday, #average daily total P loading
                       na.rm=TRUE),
-            se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
-            min=min(TotP_kgday, na.rm=TRUE),
-            max=max(TotP_kgday, na.rm=TRUE)
+            se=(sd(atm_TotP_kgday, na.rm=TRUE)/sqrt(length(atm_TotP_kgday))),
+            min=min(atm_TotP_kgday, na.rm=TRUE),
+            max=max(atm_TotP_kgday, na.rm=TRUE)
             )
 precip_dayavg
 ```
@@ -140,7 +139,7 @@ c) calculating total P loading from atm deposit dring CyanoHAB season...
 precip_sumtot<- precip_interp %>%
   filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
   group_by(Yr) %>% #group all records by year
-  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+  summarise(sum_TP_kgyr=sum(atm_TotP_kgday))  #calculate the total P load
 precip_sumtot
 ```
 
@@ -163,7 +162,7 @@ e) calculating annual total P loading from atm deposit by year...
 ```{r}
 precip_yrtot<- precip_interp %>%
   group_by(Yr) %>% #group all records by year
-  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+  summarise(sum_TP_kgyr=sum(atm_TotP_kgday))  #calculate the total P load
 precip_yrtot
 ```
 
@@ -183,7 +182,7 @@ Total P load from atm deposit plotted by year.
 # Step 5. Save estimated P atm deposition as separate data file:
 
 ```{r}
-precip_sum<- precip_interp %>%
-  filter(daynum>= 195 & daynum <=255) #filter for CyanoHAB season
-write.csv(precip_sum, file="Cleaned_data/Mendota_P_atm.csv")
+write.csv(precip_interp, file="Cleaned_data/Mendota_P_atm.csv")
 ```
+
+New data file saved as "Mendota_P_atm.csv" in clean data folder.
