--- a/Mendota_Pexternal_inflow.Rmd
+++ b/Mendota_Pexternal_inflow.Rmd
@@ -24,6 +24,7 @@ library(dplyr) #needed for transforming data
 library(reshape2) #needed for transforming data wide to long
 library(lubridate) #needed for date conversion functions
 library(ggplot2) #needed for plotting
+library(ggbreak) #needed for changing scales in graphs
 ```
 
 Packages loaded.
@@ -105,17 +106,17 @@ Total P data plotted. Total P available for all three inflows from 2012 to 2022.
 a) interpolating data for PB inflow using linear regression...
 
 ```{r}
-date_range<- seq( #creates a vector of sequence data
+PB_date_range<- seq( #creates a vector of sequence data
   min(PB_TotP_flow$sampledate), #starting at the first sample date
   max(PB_TotP_flow$sampledate), #ending at the last sample date
   by="1 day") #observations every 1 day
-interpolated<- approx( #creates a vector of data that linearly interpolates 
+PB_interpolated<- approx( #creates a vector of data that linearly interpolates 
   PB_TotP_flow$sampledate, #across date
   PB_TotP_flow$TotP_kgday, #the predicted values of total P
-  xout=date_range) #for every 1 day
+  xout=PB_date_range) #for every 1 day
 PB_TotP_flow_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #measurements every 1 day
-                             TotP_kgday=interpolated$y) #predicted total P 
+  sampledate = as.Date(PB_interpolated$x), #measurements every 1 day
+                             PB_TotP_kgday=PB_interpolated$y) #predicted total P 
 ```
 
 Total P loading interpreted for Pheasant Branch.
@@ -123,17 +124,17 @@ Total P loading interpreted for Pheasant Branch.
 b) interpolating data for YR inflow using linear regression...
 
 ```{r}
-date_range<- seq( #creates a vector of sequence data
+YR_date_range<- seq( #creates a vector of sequence data
   min(YR_TotP_flow$sampledate), #starting at the first sample date
   max(YR_TotP_flow$sampledate), #ending at the last sample date
   by="1 day") #observations every 14 days (bimonthly) 
-interpolated<- approx( #creates a vector of data that linearly interpolates 
+YR_interpolated<- approx( #creates a vector of data that linearly interpolates 
   YR_TotP_flow$sampledate, #across date
   YR_TotP_flow$TotP_kgday, #the predicted values of Hypo P: Epi P
-  xout=date_range) #for every 1 day
+  xout=YR_date_range) #for every 1 day
 YR_TotP_flow_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #measurements every 14 days
-                             TotP_kgday=interpolated$y) #predicted hypo: epi P 
+  sampledate = as.Date(YR_interpolated$x), #measurements every 14 days
+                             YR_TotP_kgday=YR_interpolated$y) #predicted hypo: epi P 
 ```
 
 Total P loading interpolated for Yahara River.
@@ -141,17 +142,17 @@ Total P loading interpolated for Yahara River.
 c) interpolating data for SMC inflow using linear regression...
 
 ```{r}
-date_range<- seq( #creates a vector of sequence data
+SMC_date_range<- seq( #creates a vector of sequence data
   min(SMC_TotP_flow$sampledate), #starting at the first sample date
   max(SMC_TotP_flow$sampledate), #ending at the last sample date
   by="1 day") #observations every 14 days (bimonthly) 
-interpolateonend<- approx( #creates a vector of data that linearly interpolates 
+SMC_interpolated<- approx( #creates a vector of data that linearly interpolates 
   SMC_TotP_flow$sampledate, #across date
   SMC_TotP_flow$TotP_kgday, #the predicted values of Hypo P: Epi P
-  xout=date_range) #for every 1 day
+  xout=SMC_date_range) #for every 1 day
 SMC_TotP_flow_interp <- data.frame( #creates a new data frame that has 
-  sampledate = as.Date(interpolated$x), #measurements every 14 days
-                             TotP_kgday=interpolated$y) #predicted hypo: epi P 
+  sampledate = as.Date(SMC_interpolated$x), #measurements every 14 days
+                             SMC_TotP_kgday=SMC_interpolated$y) #predicted hypo: epi P 
 ```
 
 Total P loading interpolated for Six-mile Creek.
@@ -159,61 +160,47 @@ Total P loading interpolated for Six-mile Creek.
 # Step 4. Merge the data:
 Note, R only merges two data frames at a time.
 
-a) merging data files...
-
 ```{r}
 Inflows<- merge(PB_TotP_flow_interp, YR_TotP_flow_interp, #merge the two files
                 by="sampledate") #keep records with same sample date
-Inflows<- Inflows %>%
-  mutate(PB_TotP_kgday=TotP_kgday.x, #rename the column with inflow name
-         TotP_kgday.x=NULL, #remove duplicate column
-         YR_TotP_kgday=TotP_kgday.y, #rename column with inflow name
-         TotP_kgday.y=NULL #remove duplicate column
-         ) 
 Inflows<- merge(Inflows, SMC_TotP_flow_interp, #merge two data frames
                 by="sampledate") #keep records with same sample date
 Inflows<- Inflows %>%
-  mutate(SMC_TotP_kgday=TotP_kgday, #rename the column with inflow name
-         TotP_kgday=NULL) #remove duplicate column
+  mutate(allInflows_TotP_kgday=(PB_TotP_kgday+YR_TotP_kgday+SMC_TotP_kgday), #sum
+         Yr= as.integer(format(sampledate, "%Y")), #add year field
+         daynum=as.integer(format(sampledate, "%j")) #add day number field
+         )
 ```
 
 Total P data files merged into one file, "Inflows."
 
-b) reshape the data frame and rename columns...
+# Step 5. View and summarize the data:
+
+a) viewing daily total P loading for each inflow...
 
 ```{r}
-Inflows<- melt(Inflows, #the table you want to reshape wide to long
+Inflows_long<- melt(Inflows, #reshape data frame from wide to long
                id.vars=c("sampledate"), #the column to use as unique id
-               measure.vars=c("PB_TotP_kgday","YR_TotP_kgday","SMC_TotP_kgday"), 
+               measure.vars=c("PB_TotP_kgday","YR_TotP_kgday","SMC_TotP_kgday",
+                              "allInflows_TotP_kgday"), 
                #the columns where values will be taken
-               variable.name="Inflow",
-               value.name="TotP_kgday"
+               variable.name="Inflow", #assigns variable field name
+               value.name="TotP_kgday" #assigns value field name
                )
-Inflows$Inflow<-as.character(Inflows$Inflow) #tell R character data held
-Inflows$Inflow[Inflows$Inflow=="PB_TotP_kgday"] <- "Pheasant Branch"
-Inflows$Inflow[Inflows$Inflow=="YR_TotP_kgday"] <- "Yahara River"
-Inflows$Inflow[Inflows$Inflow=="SMC_TotP_kgday"] <- "Six-mile Creek"
-```
+Inflows_long$Inflow<-as.character(Inflows_long$Inflow) #tell R character data held
+Inflows_long$Inflow[Inflows_long$Inflow=="PB_TotP_kgday"] <- "Pheasant Branch"
+Inflows_long$Inflow[Inflows_long$Inflow=="YR_TotP_kgday"] <- "Yahara River"
+Inflows_long$Inflow[Inflows_long$Inflow=="SMC_TotP_kgday"] <- "Six-mile Creek"
+Inflows_long$Inflow[Inflows_long$Inflow=="allInflows_TotP_kgday"] <- "All inflows"
 
-Data frame reshaped wide to long and columns renamed.
-
-c) removing any NAs and adding time columns...
-
-```{r}
-Inflows<- Inflows %>%
+Inflows_long<- Inflows_long %>%
   filter(!is.na(TotP_kgday)) %>% #remove records that have NA
   mutate(daynum=as.integer(format(sampledate, format="%j")), #add column with 
          #daynum for filtering
-         Yr=as.integer(format(sampledate, format="%Y")) #add column with Yr 
-         ) 
-```
+         Yr=as.integer(format(sampledate, format="%Y"))) %>% #add column with Yr
+  filter(Yr>= 2012 & Yr <=2018)
 
-# Step 5. View and summarize the data:
-
-a) viewing data...
-
-```{r}
-ggplot(data=Inflows, 
+ggplot(data=Inflows_long, 
        aes(x=daynum, 
            y=TotP_kgday)) +
   geom_line()+
@@ -222,20 +209,20 @@ ggplot(data=Inflows,
   labs(y="Daily Stream Total P loading (kg/day)",
        x="Day of Year",
       caption="White highlight indicates CyanoHAB season, mid-July to mid-Sept.") +
-  ylim(c(0, max(Inflows$TotP_kgday))) +
+  scale_y_continuous(trans="sqrt") + #transform y-axis scale to see small values
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
 ```
 
-Graph plotted of Total P for day of year across the three inflows, for all years. 
+Plotted Total P for day of year across the three inflows, for all years. 
 
 b) calculating average daily total P loading for each inflow during the CyanoHAB 
 season...
 
 ```{r}
-Inflows_avg<- Inflows %>%
+Inflows_avg<- Inflows_long %>%
   filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
   group_by(Inflow) %>% #compute for each inflow
   summarise(mean=mean(TotP_kgday, #average daily total P loading
@@ -248,65 +235,35 @@ Inflows_avg
 
 Estimated average daily total P loading during CyanoHAB season for each inflow.
 
-c) calculating average daily total P loading for all inflows during the CyanoHAB
-season...
-
-```{r}
-Inflows_avgsum<- Inflows %>%
-  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
-  summarise(mean=mean(TotP_kgday,
-                      na.rm=TRUE),
-            se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
-            min=min(TotP_kgday, na.rm=TRUE),
-            max=max(TotP_kgday, na.rm=TRUE))
-Inflows_avgsum
-```
-
-Estimated average daily total P loading during CyanoHAB season for all inflows.
-
-d) calculating annual total P load during CyanoHAB season...
+c) calculating annual total P load during CyanoHAB season for each year...
 
 ```{r}
 Inflows_sumavg<- Inflows %>%
   filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
   group_by(Yr) %>% #group all records by year
-  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+  summarise(sum_TP_kgyr=sum(allInflows_TotP_kgday))  #calculate the total P load
 Inflows_sumavg
 ```
 
 The average annual total P load, during the CyanoHAB season, was
 `r mean(Inflows_sumavg$sum_TP_kgyr)` +- `r sd(Inflows_sumavg$sum_TP_kgyr)/sqrt(length(Inflows_sumavg$sum_TP_kgyr))` kg/yr. 
 
-e) calculating annual total P load for year...
+d) calculating annual total P load for year...
+
 ```{r}
 Inflows_yravg<- Inflows %>%
   group_by(Yr) %>% #group all records by year
-  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+  summarise(sum_TP_kgyr=sum(allInflows_TotP_kgday))  #calculate the total P load
 Inflows_yravg
 ```
 
 The average annual total P load, for the year, was
 `r mean(Inflows_yravg$sum_TP_kgyr)` +- `r sd(Inflows_yravg$sum_TP_kgyr)/sqrt(length(Inflows_yravg$sum_TP_kgyr))` kg/yr. 
 
-f) plotting annual total P load per year...
-```{r}
-ggplot(Inflows_yravg, aes(x=as.factor(Yr), y=sum_TP_kgyr)) +
-  geom_col() +
-  theme_classic(base_size=12) +
-  labs(x="Year", y="Total P loading from streams (kg/yr)") 
-```
-
-Total P load from streams plotted by year.
-
 # Step 6. Save new data file.
 
 ```{R}
-Inflows_sumP<- Inflows %>%
-  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
-  group_by(sampledate) %>% #for each day
-  summarize(TotP_kgday=sum(TotP_kgday))
-head(Inflows_sumP)
-write.csv(Inflows_sumP, file="Cleaned_data/Mendota_P_inflows.csv") #save as new data file
+write.csv(Inflows, file="Cleaned_data/Mendota_P_inflows.csv") #save as new data file
 ```
 
 Data file saved as "Mendota_P_inflows.csv".
