--- a/Mendota_Volume.Rmd
+++ b/Mendota_Volume.Rmd
@@ -3,226 +3,144 @@ title: "Mendota_Volume"
 author: "Lauren A. Knose, ORISE-EPA"
 date: '2023-02-14'
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
-The purpose of this program is to calculate the volumes of each lake layer 
-(epilimnion, hypolimnion, sediments) to support mass balance calculations.
+The purpose of this program is to identify the thermocline depth from daily temperature profiles and calculate the daily volumes of each lake layer   (epilimnion, metalimnion, hypolimnion).
 
-Step 1. set working directory and load dependent packages:
+# Step 1. Load dependent packages and data:
+
+a) loading dependent packages...
 
 ```{r}
-library(ggplot2) #needed for plotting data
+library(ggplot2) #needed for plots
 library(dplyr) #needed for reformatting data
+library(tidyverse) #needed for organizing data
+library(lubridate) #needed for date processing
+library(rLakeAnalyzer) #needed to find thermocline depth from temperature profile
+library(reshape2) #needed to reshape data frame
 ```
 
-Step 2. Load the data into R: 
+Packages loaded.
+
+b) loading dependent data...
 
 ```{r}
-Secchi <- read.csv(file.choose()) #choose ntl31_v9_secchi.csv
+watertemp<-read.csv(file="Original_data/ntl29_v12.csv")
 ```
 
-Note the metadata can be found at: 
-https://portal.edirepository.org/nis/metadataviewer?packageid=knb-lter-ntl.31.32
+Data loaded.
 
-Step 3. Filter and transform the data:
+# Step 2. Filter and transform the data:
 
 ```{r}
-ME_Secchi<- Secchi %>%
-  filter(lakeid=="ME") %>% # filters data for Lake Mendota 
-  mutate(sampledate=as.Date(sampledate, origin="1899-12-30")) #tells R to format 
-          #data as date
+watertemp2<- watertemp %>%
+  filter(lakeid=="ME") %>% #filter for Lake Mendota data only
+  filter(rep==1) %>% #filter for rep 1 (no analytical reps)
+  select(sampledate, depth, wtemp) %>% #select columns of interest
+  mutate(sampledate=as.Date(sampledate, format="%m/%d/%Y",
+                            origin="1899-12-30"), #reformat date
+         depth_m=depth, #add units to column
+         depth=NULL, #remove duplicate column
+         watertemp_C=wtemp,#rename column with units
+         wtemp=NULL,  #remove duplicate column
+         daynum=as.integer(format(sampledate, format="%j")),
+         Yr=as.integer(format(sampledate, "%Y"))) %>% 
+  filter(Yr>=2012 & Yr <=2018)  #filter for the study years (2012 - 2018)
 ```
 
-Step 4. Summarize and view the data:
+Temp data filtered and transformed.
+
+# Step 3. View data:
+
+Note, using R code from Dr. Dewey Dunnington (Canada).
+```{r}
+ggplot(data=watertemp2, aes(x=sampledate, y=depth_m, colour=watertemp_C)) + 
+  geom_point() + 
+  scale_y_reverse() +
+  scale_colour_gradient(high=scales::muted("red"),
+                        low=scales::muted("blue")
+                        )
+```
+
+# Step 4. Calculate the thermocline depth for each day:
+
+a) reshaping the data frame for package...
+```{r}
+wtr<- watertemp2 %>%
+  select(sampledate, depth_m, watertemp_C) #only include needed columns
+wtr<- dcast(wtr, sampledate ~ depth_m) # cast data frame from long to wide
+colnames(wtr)<- paste("wtr", colnames(wtr), sep="_") #add wtr_ before depth
+wtr<- wtr %>%
+  mutate(datetime=wtr_sampledate, wtr_sampledate=NULL)
+```
+
+Data frame reshaped and ready for input into the package.
+
+b) input data into the time series thermocline depth calculator (rLakeAnalyzer)...
 
 ```{r}
-ME_Secchi_day <- ME_Secchi %>%
-  group_by(daynum) %>% #group all data for that day of year (multiple years)
-  summarize(secview_avg= mean(secview, na.rm=TRUE), #mean of Secchi with viewer
-            secnview_avg= mean(secnview, na.rm=TRUE)) #mean of Secchi without viewer
-
-plot(ME_Secchi_day$secview_avg~ME_Secchi_day$daynum, #plot Secchi by day of yr
-     xlab="Day of Year", #add x axis label
-     ylab="Average Secchi Depth (m)") #add y axis label) #plot Secchi with viewer
+t.d<- ts.thermo.depth(wtr, na.rm=TRUE)
+ggplot(data=t.d, aes(x=datetime, y=thermo.depth)) + 
+  geom_point() + 
+  geom_line() +
+  scale_y_reverse() +
+  theme_classic() +
+  labs(x="Sample Date", y="Thermocline depth (m)")
 ```
 
-There are only 3 observations so I can't use this data. I need to use the Secchi
-disk depth (m) measured without the viewer. I plotted this data, below.
+Thermocline depth calculated for each sample date and plotted. 
+
+# Step 5. Interpolate missing data:
 
 ```{r}
-ggplot(data=ME_Secchi_day, aes(y=secnview_avg, x=as.numeric(daynum))) + #plot Secchi by day of yr
-  geom_point()+
-  labs(title="Lake Mendota, WI",
-       x="Day of Year", #add x axis label
-       y="Average Secchi Depth (m)") + #add y axis label
-  theme_classic()+
-  geom_smooth()+
-  annotate('rect', xmin=195, xmax=255, ymin=0, ymax=Inf, alpha=.6, fill='gray60') #shade area of HAB season
+td_date_range<- seq( #creates a vector of sequence data
+  min(t.d$datetime), #starting at the first sample date
+  max(t.d$datetime), #ending at the last sample date
+  by="1 day") #observations every 14 days (bimonthly) 
+td_interpolated<- approx( #creates a vector of data that linearly interpolates
+  t.d$datetime, #across date
+  t.d$thermo.depth, #the predicted values of Hypo P: Epi P
+  xout=td_date_range) #for every 1 day
+td_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(td_interpolated$x), #measurements every 14 days
+                             Thermo_depth_m=td_interpolated$y) #predicted hypo: epi P 
+ggplot(data=td_interp, aes(x=sampledate, y=Thermo_depth_m)) + 
+  geom_point() + 
+  geom_line() +
+  scale_y_reverse() +
+  theme_classic() +
+  labs(x="Sample Date", y="Thermocline depth (m)")
 ```
 
-The figure above represents the change in transparency of the lake across Julian
-day. A clear water column would have a high Secchi depth, whereas a turbid water 
-column would have a low Secchi depth. The red dashed lines represent the time of 
-year when the Secchi disk depth doesn't change (slope ~ 0), which corresponds to 
-July 15 to September 12. This means that on average the summer season when the 
-water transparency is consistently low (corresponding to CyanoHAB presence), is from 
-mid-July to mid-September. Likely, fall turnover mid-September can be attributed
-to increasing transparency and the reduction of CyanoHABs. 
+# Step 6. Calculate the change in volume of epilimnion due to thermocline depth:
 
-There appears to be a polynomial relationship with high variability during Winter 
-and Spring, and an exponential or linear increase during Fall, also with high 
-variability. I will have to perform separate analyses to describe the patterns
-during Winter, Spring, and Fall. 
-
-If I isolate the Summer period, I can perform a regression test to see if there 
-is no change in Secchi depth from mid-July to mid-September. 
+a) calculating the change in thermocline depth each day from previous day...
 
 ```{r}
-z<- lm(secnview_avg~daynum, data = subset(ME_Secchi_day, 
-                                         daynum > 195 & daynum <255))
-summary(z) #prints out the regression results testing whether y changes with x
+therm_chg<- td_interp %>%
+  mutate(Thermo_depth_m_k1=(Thermo_depth_m - lag(Thermo_depth_m, n=1))
+         )
 ```
 
-Since there is no significant change in mean Secchi depth between mid-July and 
-mid-September (`r summary(z)$r.squared`, p-value > 0.05). I have a can determine
-the HAB season to be July 15 - Sep 15, and will subset all the data to this period 
-to do my summer volume calculations.
+Daily change in thermocline depth calculated.
 
-Step 5. Set up terms and perform calculations for volume:
+b) calculating the change in epilimnion volume each day...
 
 ```{r}
-Z_max<- 25.3 #max depth of Lake Mendota, WI in meters
-Z_avg <- 12.8 #average depth of Lake Mendota, WI in meters
-V_tot<- 500000000 #total water volume of Lake Mendota, WI in m^3
-t_res<- 4.5 #residence time of Lake Mendota, WI in years
-LSA <- 39.4 #surface area of Lake Mendota, WI in km^2
-km2_m2<- 1*1000000 #conversion factor from km^2 to m^2
+LSA_m2<- 39804000 #lake surface area in m^2
+therm_chg<- therm_chg %>%
+  mutate(vol_chg_m3=(LSA_m2*Thermo_depth_m_k1)
+         )
 ```
 
-Calculate the compensation depth from the mean summer Secchi disk depth:
+Daily change in epilimnion volume calculated.
+
+Think about whether you want to account for the spatial variability in bathymetry of the lake. If you have a relatively large lake (> 1 km^2), that has a deep region surrounded by a ring of shallow region, you may need to separate the lake into a 1) polymictic zone (where sediments are directly adjacent to epilimnion) and 2) dimictic zone (where lake stratifies into layers and influence of sediment is through entrainment). If you want to account for this, then use the surface area above the dimictic zone rather than the total lake surface area. 
+
+# Step 7. Save data as new data file. 
 
 ```{r}
-sum_ME_Secchi<- ME_Secchi_day %>%
-  filter(daynum>=195 & daynum < 255) %>% #filter the data to summer HAB season
-  mutate(secview_avg=NULL) # remove the unnecessary data
-
-sum<- sum_ME_Secchi %>%
-  summarise(mean=mean(sum_ME_Secchi$secnview_avg, na.rm=TRUE),
-          min=min(sum_ME_Secchi$secnview_avg, na.rm=TRUE),
-          max=max(sum_ME_Secchi$secnview_avg, na.rm=TRUE))
-Z_cd<-sum$mean*2 #compensation depth is 2x the Secchi depth
+write.csv(therm_chg, file="Cleaned_data/Mendota_Volume.csv")
 ```
-
-The compensation depth was estimated as `r Z_cd` m, and represents the separation 
-between the upper, autotrophy dominated layer of the lake, and the lower, 
-heterotrophy dominated layer of the lake.  The layers of the lake are assumed to be
-portions of a frustum of a cone, including the upper layer (R_upper) and lower layer (r_lower).
-
-Radius (R_upper) of the Lake is greater than the radius (r_lower) of the lower level. 
-If I know the total volume of the lake (V_tot), and the upper radius (R_upper), I can 
-find the lower radius (r_lower).
-
-Calculating r_lower:
-
-```{r}
-R_upper <- sqrt((LSA*km2_m2)/pi) # calculates the radius of the upper layer
-r_lower<- 1306  #calculates the radius of the lower layer = 1306 m
-V_upper<- 
-```
-
-Based on a lake surface area of `r LSA` km^2, compensation depth of 
-`r Z_cd` m, and cylinder geometry, the volume of the upper layer is `r V_epi` m^3. 
-
-To calculate the volume of the lower layer of the lake, I assume the shape of the
-lower layer of the lake is a frustum of a circular cone shape. The volume of a
-frustum of a circular cone is (pi*h/3)*(R_upper^2+R_upper*r_lower)
-
-```{r}
-Z_hypo<- Z_max - Z_cd #cap height of bowl is the max depth - compensation depth
-V_hypo<- pi*(Z_hypo/6)*((3*(r^2)) + Z_hypo^2) #vol of spherical bowl is
-            # pi*(h/6)*(3*(r^2) + h^2)
-```
-
-Based on a lake surface area of `r LSA` km^2, compensation depth of 
-`r Z_cd` m, and spherical bowl geometry, the volume of the lower layer is 
-`r V_hypo` m^3. 
-
-```{r}
-Z_sed = 0.1 #depth of unconsolidated sediments in m (from Nurnberg 1988)
-A_hypo<- pi*(r^2 + Z_hypo^2) #surface area of spherical cap
-V_sed = A_hypo*Z_sed #volume is area * height in m^3
-```
-
-Based on the hypolimion surface area of `r A_hypo` m^2, depth of 0.1 m, and 
-spherical cap geometry, the volume of the sediments is `r V_sed` m^3.
-
-## Assumption 1: Volume of epilimnion and hypolimnion pools are not changing, 
-during the HAB season.
-
-How do we test this assumption? We could use the Generalized Lake Model (GLM), 
-or USGS bathymetry-based calculations. Hanson et al 2020 used the GLM to model 
-the daily thermocline depth (in m from surface). The thermocline is the depth at 
-which water density gradient is greater and the epilimion (mixed) layer is 
-separated from the hypolimnion. 
-
-```{r}
-therm<- read.csv(file.choose(), header=TRUE) #7542 observations
-therm_com <- therm %>%
-  na.omit(thermo_depth) %>% #removes NANs and NAs (leaves 4,026 observations)
-  mutate(datetime=as.Date(datetime, origin="1899-12-30")) %>% #tells R to format 
-          #data as date 
-  mutate(daynum=format(datetime, "%j")) #adds column with Julian date
-therm_avg<- therm_com %>%
-  group_by(daynum) %>%
-  summarize(avg_depth_m=mean(thermo_depth, na.rm=TRUE))
-    
-plot(therm_avg$avg_depth_m~therm_avg$daynum,
-     xlab = "Julian Date",
-     ylab = "Thermocline depth in meters from surface") 
-abline(v=195, col="red", lty="dashed") #Summer range for Secchi
-abline(v=255, col="red", lty="dashed") #Summer range for Secchi
-abline(h=6, col="black", lty="dashed") #Summer beginning thermocline depth
-```
-
-The figure above shows the modeled, average thermocline depth from Jan 1 to Dec 31. 
-The red dashed lines indicated the HAB season (red, vertical dashed lines), in 
-which the average Secchi depth does not change. During this period, the 
-thermocline is increasing steadily, starting at an average 6 m (black, 
-horizontal dashed line). Based on this figure, the assumption that the hypolimnion
-volume doesn't change during the HAB season is not supported. This model indicates
-the epilimnion volume is increasing, thus the hypolimnion volume is decreasing.
-
-More information about the GLM can be found here:
-https://aed.see.uwa.edu.au/research/models/glm/# 
-
-## Assumption 2: The total volume of the lake is not changing during the HAB 
-season. 
-
-The total volume of the lake can be determined from change in the lake level over 
-time. 
-
-```{r}
-level<- read.csv(file.choose(), header=TRUE) #choose LakeLevel.csv
-sum<- level %>%
-  select(Date, Lake_Mendota) %>%
-  mutate(Date=as.Date(Date, 
-                      format="%m/%d/%Y", 
-                      origin="1899-12-30"))  #refomat date as date in R
-sum_level<- sum %>%
-  mutate(daynum=yday(Date)) %>% #calculate Julian date 
-  filter(daynum>=195 & daynum < 255) %>%
-  group_by(daynum) %>%
-  summarise(avg_level=mean(Lake_Mendota, na.rm=TRUE))
-ggplot(data=sum_level, aes(y=avg_level, x=daynum)) + 
-  geom_point() + #scatter plot
-  geom_smooth(method="loess") + #adds regression line for moving avg
-  labs(x="Julian Day",
-       y="Average Lake Level (US feet)")+
-  theme_classic()
-y<- lm(avg_level~daynum, data = sum_level)
-summary(y) #prints out the regression results testing whether y changes with x
-```
-
-The water level does significantly decline during this time, but the difference
-between the max and min levels is only `r max(sum_level$avg_level) - min(sum_level$avg_level)` feet. 
-It is unclear if a volume change of 1.1 feet is ecologically significant or not.
